--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,10 @@
     width: 100px;
     height: 100px;
 }
+.button {
+    background-color:darkgreen;
+    color:white;
+}
 html {
     background-color:antiquewhite;
 }
@@ -16,4 +20,23 @@ html {
 }
 .Ctvrty {
     color:blue;
+}
+.Paty {
+    color:cadetblue;
+}
+.Sedmy {
+    color:blueviolet;
+}
+.Osmy {
+    color:dodgerblue;
+}
+.mys {
+    font-size: 24px;
+    transition: color 0.3s;
+}
+.mys:hover {
+    color: green;
+}
+.Devaty {
+    color:deeppink;
 }
